Sun Sep 18 22:48:54 2016  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb (RSS::BaseModel): Remove needless codes.
	  [Bug #12773][ruby-dev:49813]
	  Reported by Kazuhiro NISHIYAMA. Thanks!!!

Sun Sep 18 19:23:47 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* lib/sync.rb: Fix NameError when error.

Sat Sep 17 22:46:02 2016  Koichi ITO  <koic.ito@gmail.com>

	* vm_insnhelper.c (vm_throw_start): Remove too much ";"
	  [fix GH-1432]

Sat Sep 17 19:19:06 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* test/openssl/test_ssl.rb (test_ctx_options): Fix test failure on
	  Ubuntu 16.04. The fix in r56147 was incomplete. This is a cherry-pick
	  of the commit b039f3e268c2 at ruby/openssl.

Sat Sep 17 10:49:35 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* doc/extension.ja.rdoc: translate r56130 (rb_check_arity).

Sat Sep 17 02:40:52 2016  Aaron Patterson <tenderlove@ruby-lang.org>

	* ext/objspace/objspace_dump.c: Fix stream processing support for heap
	  dumps. Full heap dumps should use JSON lines (http://jsonlines.org)
	  so that we can process very large heaps without loading the entire
	  heap dump in to memory at once.

Fri Sep 16 22:10:31 2016  Naohisa Goto  <ngotogenome@gmail.com>

	* ext/openssl/ossl_ssl.c (ssl_npn_select_cb_common): Fix compile error
	  with old version of fcc (Fujitsu C Compiler) on Solaris 10.
	  [Bug #12769] [ruby-dev:49809]

Fri Sep 16 21:28:25 2016  Naohisa Goto  <ngotogenome@gmail.com>

	* internal.h (MAYBE_UNUSED): The fallback definition is needed.
	  Fix compile error with some non-GCC compilers such as
	  Oracle Solaris Studio 12.3 on Solaris 10.
	  [Bug #12767] [ruby-dev:49807]

	* internal.h (WARN_UNUSED_RESULT): ditto.

Fri Sep 16 21:19:51 2016  Naohisa Goto  <ngotogenome@gmail.com>

	* hash.c (each_pair_i_fast): Fix compile error with old version of
	  fcc on Solaris 10. [Bug #12768] [ruby-dev:49808]

Fri Sep 16 19:46:05 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (config.h): fixed compile error with VC introduced